[gd_scene load_steps=12 format=3 uid="uid://n2iib25j6w8y"]

[ext_resource type="Script" uid="uid://cgxrvtckm2dr5" path="res://Scripts/world.gd" id="1_1nyf6"]
[ext_resource type="PackedScene" uid="uid://c4yhkvcyss5u6" path="res://PlayerCharacter/scenes/player_character.tscn" id="2_2hy7t"]
[ext_resource type="PackedScene" uid="uid://o72t7lt3kg46" path="res://Scenes/wave_spawn_manager.tscn" id="3_dvddb"]
[ext_resource type="PackedScene" uid="uid://b3e08bj4ma6mh" path="res://Scenes/geometry.tscn" id="4_7ajqe"]
[ext_resource type="PackedScene" uid="uid://bxgfp6a2n1gdd" path="res://Scenes/death_screen.tscn" id="5_jp2t1"]
[ext_resource type="Script" uid="uid://hv8hrc24fkyr" path="res://Scripts/stopwatch.gd" id="6_2hy7t"]
[ext_resource type="PackedScene" uid="uid://dthjtfp3xd1td" path="res://Scenes/win_screen.tscn" id="6_jp2t1"]
[ext_resource type="PackedScene" uid="uid://cxe24h4d4fwrf" path="res://Scenes/shop_screen.tscn" id="7_7ajqe"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_036b0"]
sky_top_color = Color(0.475052, 0.573138, 0.998402, 1)
sky_horizon_color = Color(0.475052, 0.573138, 0.998402, 1)
ground_bottom_color = Color(0.133333, 0.407843, 1, 1)
ground_horizon_color = Color(0.133333, 0.407843, 1, 1)

[sub_resource type="Sky" id="Sky_dwbse"]
sky_material = SubResource("ProceduralSkyMaterial_036b0")
radiance_size = 0

[sub_resource type="Environment" id="Environment_pkg7o"]
background_mode = 2
sky = SubResource("Sky_dwbse")

[node name="World" type="Node3D"]
script = ExtResource("1_1nyf6")

[node name="PlayerController" parent="." instance=ExtResource("2_2hy7t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.66049, 0)

[node name="WaveSpawnManager" parent="." node_paths=PackedStringArray("_player", "_shop_screen") instance=ExtResource("3_dvddb")]
_player = NodePath("../PlayerController")
_shop_screen = NodePath("../ShopScreen")

[node name="Geometry" parent="." instance=ExtResource("4_7ajqe")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.94493, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.796636, 0.60446, 0, -0.60446, 0.796636, 0, 2.25272, 0)
sky_mode = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_pkg7o")

[node name="DeathScreen" parent="." instance=ExtResource("5_jp2t1")]
visible = false

[node name="WinScreen" parent="." instance=ExtResource("6_jp2t1")]
visible = false

[node name="Stopwatch" type="Node" parent="."]
script = ExtResource("6_2hy7t")

[node name="ShopScreen" parent="." instance=ExtResource("7_7ajqe")]
visible = false

[connection signal="player_death" from="PlayerController" to="." method="_on_player_died"]
[connection signal="win" from="WaveSpawnManager" to="." method="_on_wave_spawn_manager_win"]
[connection signal="retry_requested" from="DeathScreen" to="." method="_on_death_screen_retry_requested"]
[connection signal="to_title_requested" from="DeathScreen" to="." method="_on_death_screen_to_title_requested"]
[connection signal="retry_requested" from="WinScreen" to="." method="_on_death_screen_retry_requested"]
[connection signal="to_title_requested" from="WinScreen" to="." method="_on_death_screen_to_title_requested"]
